--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="logo">GlamourBeauty</div>
             <ul class="nav-links">
-                <li><a href="Index.html" id="link-inicio">Inicio</a></li>
+                <li><a href="index.html" id="link-inicio">Inicio</a></li>
                 <li><a href="productos.html" id="link-productos">Productos</a></li>
                 <li><a href="acercade.html" id="link-acercade">Acerca de</a></li>
                 <li><a href="contacto.html" id="link-contacto">Contacto</a></li>
@@ -47,7 +47,6 @@
         <section style="padding: 40px 0;">
             <h2 style="text-align: center; color: #e7008a; margin-bottom: 30px;">Productos Destacados</h2>
             <div class="product-grid" id="featured-products">
-                <!-- Los productos destacados se cargarán aquí -->
             </div>
         </section>
     </main>
@@ -61,7 +60,7 @@
             <div class="footer-section">
                 <h3>Enlaces Rápidos</h3>
                 <ul>
-                    <li><a href="Index.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
