--- a/productos.html
+++ b/productos.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="logo">GlamourBeauty</div>
             <ul class="nav-links">
-                <li><a href="Index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="acercade.html">Acerca de</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
@@ -76,7 +76,7 @@
             <div class="footer-section">
                 <h3>Enlaces Rápidos</h3>
                 <ul>
-                    <li><a href="Index.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
                     <li><a href="acercade.html">Acerca de</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
