Reinicio del sitio: index, productos y contacto funcionando

--- a/productos.html
+++ b/productos.html
@@ -1,112 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Productos - GlamourBeauty</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/Css/Style.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar">
-            <div class="logo">GlamourBeauty</div>
-            <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="acercade.html">Acerca de</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-            <div class="navbar-icons">
-                <div class="search-icon" id="search-btn">
-                    <i class="fas fa-search"></i>
-                </div>
-                <div class="cart-icon" id="cart-btn">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span id="cart-count">0</span>
-                </div>
-                <div class="user-icon" id="user-btn">
-                    <i class="fas fa-user"></i>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main id="content-area">
-        <section class="products-header">
-            <h1>Catálogo de Productos</h1>
-            <p style="color: #666; margin-top: 10px;">Descubre nuestra colección exclusiva de belleza</p>
-        </section>
-
-        <div class="filters-sidebar">
-            <div>
-                <label style="font-weight: 600; margin-right: 10px;">Filtrar por categoría:</label>
-                <select id="filter-category" style="padding: 10px; border: 1px solid #e7008a; border-radius: 6px; font-size: 14px;">
-                    <option value="TODO">Todas las categorías</option>
-                    <option value="LABIOS">Labios</option>
-                    <option value="OJOS">Ojos</option>
-                    <option value="ROSTRO">Rostro</option>
-                    <option value="ACCESORIOS">Accesorios</option>
-                    <option value="CUIDADO">Cuidado</option>
-                    <option value="SETS">Sets</option>
-                </select>
-            </div>
-            <div>
-                <label style="font-weight: 600; margin-right: 10px;">Ordenar por:</label>
-                <select id="sort-by" style="padding: 10px; border: 1px solid #e7008a; border-radius: 6px; font-size: 14px;">
-                    <option value="popular">Más Popular</option>
-                    <option value="price-low">Precio: Menor a Mayor</option>
-                    <option value="price-high">Precio: Mayor a Menor</option>
-                    <option value="rating">Mejor Calificado</option>
-                </select>
-            </div>
-        </div>
-
-        <div class="product-grid" id="products-grid">
-            <!-- Los productos se cargarán aquí -->
-        </div>
-    </main>
-
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>GlamourBeauty</h3>
-                <p>Tu tienda de belleza en línea de confianza.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Enlaces Rápidos</h3>
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="acercade.html">Acerca de</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Contáctanos</h3>
-                <p>Email: info@glamourbeauty.com</p>
-                <p>Teléfono: +34 123 456 789</p>
-            </div>
-            <div class="footer-section">
-                <h3>Síguenos</h3>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2024 GlamourBeauty. Todos los derechos reservados.</p>
-        </div>
-    </footer>
-
-    <script src="assets/Js/script.js"></script>
-    <script>
-        window.addEventListener('load', function() {
-            mostrarProductos(PRODUCTS);
-            configurarFiltros();
-        });
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Productos - GlamourBeauty</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"><link rel="stylesheet" href="assets/Css/Style.css"></head><body><header><nav class="navbar"><div class="logo">GlamourBeauty</div><ul class="nav-links"><li><a href="index.html">Inicio</a></li><li><a href="productos.html">Productos</a></li><li><a href="contacto.html">Contacto</a></li></ul><div class="navbar-icons"><div class="search-icon"><i class="fas fa-search"></i></div><div class="cart-icon"><i class="fas fa-shopping-cart"></i></div><div class="user-icon"><i class="fas fa-user"></i></div></div></nav></header><main id="content-area"><section class="products-header"><h1>Catálogo de Productos</h1><p>Descubre nuestra colección exclusiva</p></section><div class="product-grid"><div class="product-card"><img src="assets/Img/Paleta de sombras Glam.png" alt="Paleta de Sombras Glam"><div class="product-info"><h3>Paleta de Sombras Glam</h3><div class="price"><span class="product-price">$27.99</span></div><button class="btn-add-cart"><i class="fas fa-shopping-cart"></i> Agregar</button></div></div><div class="product-card"><img src="assets/Img/Pintalabios Luxury.png" alt="Pintalabios Velvet Luxury"><div class="product-info"><h3>Pintalabios Velvet Luxury</h3><div class="price"><span class="product-price">$21.24</span></div><button class="btn-add-cart"><i class="fas fa-shopping-cart"></i> Agregar</button></div></div><div class="product-card"><img src="assets/Img/Base de maquillaje HD.png" alt="Base Flawless HD"><div class="product-info"><h3>Base Flawless HD</h3><div class="price"><span class="product-price">$26.99</span></div><button class="btn-add-cart"><i class="fas fa-shopping-cart"></i> Agregar</button></div></div></div></main><footer><div class="footer-content"><div class="footer-section"><h3>GlamourBeauty</h3><p>Tu tienda de belleza en línea de confianza.</p></div><div class="footer-section"><h3>Enlaces Rápidos</h3><ul><li><a href="index.html">Inicio</a></li><li><a href="productos.html">Productos</a></li><li><a href="contacto.html">Contacto</a></li></ul></div><div class="footer-section"><h3>Contáctanos</h3><p>Email: info@glamourbeauty.com</p><p>Teléfono: +34 123 456 789</p></div><div class="footer-section"><h3>Síguenos</h3><div class="social-icons"><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-twitter"></i></a></div></div></div><div class="footer-bottom"><p>&copy; 2024 GlamourBeauty. Todos los derechos reservados.</p></div></footer></body></html>
